# course_project

./: .env.example  README.md  pyproject.toml
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_main.py  test_operations.py  test_services.py  test_utils.py  test_views.py
